--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -2160,7 +2160,7 @@ a {
   display: none;
 }
 .h2 {
-  font-size: 54px;
+  font-size: 2.25em;
   font-weight: 600;
   line-height: 1.1;
 }
@@ -2187,7 +2187,7 @@ a {
   line-height: 0.7;
 }
 .h3 {
-  font-size: 32px;
+  font-size: 1.41em;
   font-weight: 400;
 }
 .h3.text-3.text-center.is-smaller {
@@ -2227,8 +2227,8 @@ a {
   line-height: 1.2;
 }
 .p-leading {
-  font-size: 1.5em;
-  font-weight: 500;
+  font-size: 1.33em;
+  font-weight: 400;
   line-height: 1.15;
 }
 .p-leading.line-height-1-1.is-service-single-text {
@@ -2564,22 +2564,21 @@ a {
 }
 .project-heading {
   margin-top: 5%;
-  font-size: 59px;
 }
 .project-blue-text {
   color: rgba(65, 176, 214, 1);
   margin-top: 5%;
-  font-size: 59px;
+  font-size: 2.458em;
 }
 .project-desc {
-  font-size: 24px;
+  font-size: 1em;
   font-weight: 400;
 }
 .project-heading4 {
-  font-size: 34px;
+  font-size: 1.333em;
   font-weight: 600;
   margin-top: 5%;
-  line-height: 38px;
+  line-height: 28px;
 }
 .space-top {
   margin-top: 20px;
@@ -2622,7 +2621,8 @@ a {
   right: 20px;
   width: auto;
   height: 62px;
-  font-size: 20px;
+  font-weight: 400;
+  font-size: 0.833em;
   color: white;
   background-color: rgba(0, 0, 0, 0.62);
   display: flex;
@@ -2890,7 +2890,7 @@ a {
   width: 100%;
   color: #fff;
 
-  font-size: 3em;
+  font-size: 1.7em;
   line-height: 1;
 }
 .nav_main-arrow {
@@ -3236,6 +3236,13 @@ a {
   font-weight: 400;
   line-height: 1.4;
 }
+
+.font-normal {
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
 .p-body-normal.opacity-03.letter-spacing-0-5 {
   flex-direction: column;
   display: flex;
@@ -4567,6 +4574,10 @@ a {
   padding-top: 0.2em;
   display: flex;
 }
+
+.blog__newsletter-form input {
+  font-size: 0.875em;
+}
 .blog__newsletter-field {
   width: 66%;
   background-color: transparent;
@@ -5782,7 +5793,7 @@ a {
   display: flex;
 }
 .newsletter-button-text {
-  font-size: 24px;
+  font-size: 1em;
   font-weight: 600;
 }
 .single-process-wrap {
