Address underlined, Phone and email updated

--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -4877,6 +4877,10 @@ a {
   width: 100%;
 }
 
+.footer-content-row .address {
+  text-decoration: underline;
+}
+
 .text-right-align {
   text-align: right;
 }
