--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -5037,7 +5037,7 @@ a {
 .gradient__image-wrapper {
   z-index: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0%;
   bottom: 0%;
