update service and project page

--- a/src/Components/Services/Service.css
+++ b/src/Components/Services/Service.css
@@ -1,4 +1,4 @@
-.service-heading {
+/* .service-heading {
   color: rgba(255, 255, 255, 1);
   margin-top: 5%;
 }
@@ -21,4 +21,34 @@
   display: flex;
   background-color: red;
   justify-content: center;
+} */
+.audio-service {
+  margin-top: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.space-service {
+  margin-top: 4%;
+}
+.quest-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quest-container .quest-text {
+  font-size: 2.875em;
+  font-weight: 400;
+  color: rgba(185, 185, 185, 1);
+  margin-bottom: 2%;
+}
+.button-outter .blue-background {
+  background-color: rgba(65, 176, 214, 1);
+}
+.white-background {
+  background-color: #fff;
+}
+.move-right {
+  right: -2%;
 }
