--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -2562,8 +2562,9 @@ a {
   border-radius: 24px;
   padding: 22px;
 }
-.project-heading {
+.project-heading-home {
   margin-top: 5%;
+  color: white;
 }
 .project-blue-text {
   color: rgba(65, 176, 214, 1);
@@ -3680,6 +3681,8 @@ a {
   grid-column-gap: 1em;
   grid-row-gap: 1em;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .single-service-wrapper {
   width: 20em;
@@ -5925,6 +5928,11 @@ a {
   width: 10.625em;
   height: 3em;
 }
+
+.button-outter.services {
+  width: 242px;
+  height: 3em;
+}
 .newsletter-close.text-3.underline-link.is-ligher {
   box-shadow: inset 0 -2px rgba(0, 0, 0, 0.2);
 }
@@ -6859,7 +6867,7 @@ a {
     width: 12px;
     height: 12px;
   }
-  .text-rotaotr.is-outside {
+.text-rotaotr.is-outside {
     display: none;
   }
   .text-rotaotr.is-inside {
@@ -7156,7 +7164,7 @@ a {
     font-size: 18px;
   }
   .button-outter {
-    width: auto;
+    width: 100%;
     height: auto;
     position: relative;
   }
@@ -8060,6 +8068,15 @@ a {
   }
   .button-outter {
     display: none;
+  }
+  .button-outter.services {
+    width: 120px;
+    height: 25px;
+    display: block !important;
+  }
+  .button-outter.services .text-2 {
+   font-size: 8px;
+   width: auto;
   }
   .footer__sitemap-holder {
     flex-direction: row;
