--- a/src/Components/Services/Service.css
+++ b/src/Components/Services/Service.css
@@ -36,6 +36,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 10;
 }
 .quest-container .quest-text {
   font-size: 2.875em;
