--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -5075,9 +5075,9 @@ a {
 .footer__form-field {
   width: 49%;
   height: 3em;
-  color: rgba(220, 239, 216, 0.8);
-  background-color: rgba(220, 239, 216, 0.05);
-  border: 1.4px solid rgba(255, 255, 255, 0);
+  color: #fff;
+  background-color: rgba(44, 53, 64, 1);
+  border: 1.4px solid transparent;
   border-radius: 16px;
   margin-bottom: 2%;
   padding-top: 0.9em;
@@ -5087,17 +5087,21 @@ a {
   font-weight: 400;
   transition: background-color 0.1s, border-color 0.1s;
 }
+.footer__form-field-wrapper .phone {
+  width: 100%;
+}
 .footer__form-field:hover {
   border-color: rgba(220, 239, 216, 0.15);
 }
 .footer__form-field:focus {
-  border-color: rgba(151, 210, 139, 0.7);
+  border-color: rgba(51, 144, 151, 1);
 }
 .footer__form-field::-ms-input-placeholder {
   color: rgba(220, 239, 216, 0.2);
 }
 .footer__form-field::placeholder {
-  color: rgba(220, 239, 216, 0.2);
+  color: rgba(165, 165, 165, 0.83);
+  font-size: 22px;
 }
 .footer__form-field.is-text {
   width: 100%;
@@ -5109,7 +5113,7 @@ a {
 .footer__submit-button-wrapper {
   width: 100%;
   height: 4em;
-  background-color: var(--accent-green);
+  background-color: rgba(51, 144, 151, 1);
   border-radius: 16px;
   flex-direction: column;
   justify-content: center;
@@ -5122,9 +5126,9 @@ a {
   z-index: 2;
   width: 100%;
   height: 100%;
-  color: var(--dark-background);
+  color: rgba(255, 255, 255, 0.83);
   background-color: transparent;
-  font-size: 1.25em;
+  font-size: 20px;
   position: relative;
 }
 .footer__direct-email {
