--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -2573,8 +2573,8 @@ a {
 }
 .project-heading-home {
   margin-top: 5%;
-  color:white;
-  font-family:  "Universo-bold";
+  color: white;
+  font-family: "Universo-bold";
 }
 .project-blue-text {
   color: rgba(65, 176, 214, 1);
@@ -4924,6 +4924,9 @@ a {
     grid-template-columns: 1fr;
     padding-left: 2em;
     padding-right: 2em;
+  }
+  .footer-content-row .address {
+    text-decoration: none;
   }
 
   .spacing-bottom-04-px {
@@ -8108,7 +8111,7 @@ a {
     top: 250px;
   }
   .button-outter {
-   width: 70%;
+    width: 70%;
   }
   .button-outter.services {
     width: 120px;
