--- a/src/Components/User/User.css
+++ b/src/Components/User/User.css
@@ -29,6 +29,11 @@
   flex-direction: column;
   align-items: center;
 }
+.user-design {
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
+}
 .single-social-detail {
   display: flex;
   margin-top: 18px;
