--- a/src/Components/User/User.css
+++ b/src/Components/User/User.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
+  height: 100%;
+  overflow: scroll;
   margin: 5px;
 }
 .user-text {
@@ -48,7 +49,7 @@
   width: 50%;
 }
 .gray-background {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   width: 41px;
