--- a/src/Components/User/User.css
+++ b/src/Components/User/User.css
@@ -49,7 +49,7 @@
   width: 50%;
 }
 .gray-background {
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 41px;
