--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
   font-family: "CreatoDisplay-Regular", sans-serif;
 }
 
