--- a/src/Components/Services/Service.css
+++ b/src/Components/Services/Service.css
@@ -26,3 +26,46 @@
 .service-heading-wrapper h3 {
   padding: 20px;
 }
+
+@media screen and (max-width: 767px) {
+  .service__single-image-wrap.service-heading-wrapper {
+    margin-top: 40px !important;
+    margin-bottom: 40px;
+  }
+  .service-heading-wrapper h3 {
+    font-size: 20px;
+  }
+}
+
+/* Medium Devices (Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+  .service__single-image-wrap.service-heading-wrapper {
+    margin-top: 20px !important;
+    margin-bottom: 20px;
+  }
+  .service-heading-wrapper h3 {
+    font-size: 24px;
+  }
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+  .service__single-image-wrap.service-heading-wrapper {
+    margin-top: 20px !important;
+    margin-bottom: 20px;
+  }
+  .service-heading-wrapper h3 {
+    font-size: 26px;
+  }
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+  .service__single-image-wrap.service-heading-wrapper {
+    margin-top: 20px !important;
+    margin-bottom: 20px;
+  }
+  .service-heading-wrapper h3 {
+    font-size: 28px;
+  }
+}
