--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -3257,6 +3257,12 @@ a {
   line-height: 1.4;
 }
 
+.p-body-large {
+  font-size: 29px;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
 .font-normal {
   font-size: 1em;
   font-weight: 400;
@@ -4888,8 +4894,6 @@ a {
   width: 100%;
   margin-top: 20px;
   grid-row-gap: 4em;
-  padding-left: 9em;
-  padding-right: 9em;
 }
 
 /* Individual items in the grid */
@@ -4918,6 +4922,9 @@ a {
 
 /* Media query for mobile responsiveness */
 @media (max-width: 767px) {
+  .footer-new {
+   padding: 0 !important;
+  }
   .infinix-desc {
     font-size: 24px;
   }
@@ -5218,7 +5225,7 @@ a {
   font-weight: 400;
 }
 .nav_fontsize-54 {
-  font-size: 54px;
+  font-size: 40px;
   font-weight: 600;
 }
 .logo-cover {
@@ -7262,8 +7269,16 @@ a {
   .blog__cover-image-wrapper {
     padding-top: 50%;
   }
+  .nav_fontsize-54 {
+    font-size: 30px;
+    font-weight: 600;
+  }
 }
 @media screen and (max-width: 767px) {
+  .nav_fontsize-54 {
+    font-size: 26px;
+    font-weight: 600;
+  }
   .section {
     padding-left: 0;
     padding-right: 0;
@@ -8209,6 +8224,10 @@ a {
   }
 }
 @media screen and (max-width: 479px) {
+  .nav_fontsize-54 {
+    font-size: 22px;
+    font-weight: 600;
+  }
   p {
     font-size: 20px;
   }
