--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -2597,10 +2597,11 @@ a {
 /* Image inside each grid item */
 .partner-item img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
   display: block;
   cursor: pointer;
   border-radius: 18px;
+  object-fit: cover;
   transition: filter 0.3s ease; /* Smooth transition for the image */
 }
 
@@ -2660,6 +2661,10 @@ a {
 .partner-item {
   position: relative;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Hover effect on the image */
