--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -755,6 +755,9 @@ textarea.w-select {
   display: none !important;
 }
 @media screen and (max-width: 991px) {
+  .infinix-desc {
+    font-size: 32px;
+  }
   .w-container {
     max-width: 728px;
   }
@@ -2580,6 +2583,7 @@ a {
   color: rgba(65, 176, 214, 1);
   margin-top: 5%;
   font-size: 2.458em;
+  font-family: "Universo-bold";
 }
 .project-desc {
   font-size: 24px;
@@ -2589,6 +2593,7 @@ a {
   font-size: 32px;
   font-weight: 600;
   margin-top: 5%;
+  width: 572px;
 }
 .space-top {
   margin-top: 20px;
@@ -2597,7 +2602,8 @@ a {
 /* Image inside each grid item */
 .partner-item img {
   max-width: 100%;
-  height: 100%;
+  height: 508px;
+  width: 572px;
   display: block;
   cursor: pointer;
   border-radius: 18px;
@@ -2665,6 +2671,8 @@ a {
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Hover effect on the image */
@@ -2884,7 +2892,7 @@ a {
 .menu-link {
   grid-column-gap: 0.5em;
   grid-row-gap: 0.5em;
-  align-items: flex-end;
+  align-items: center;
   padding-top: 0.3em;
   padding-bottom: 0.3em;
   display: flex;
@@ -3076,7 +3084,7 @@ a {
   height: 3.2em;
   grid-column-gap: 0.3em;
   grid-row-gap: 0.3em;
-  background-color: rgba(101, 132, 121, 0.2);
+  background-color:#30B1BB;
   border-radius: 100%;
   flex-direction: column;
   justify-content: center;
@@ -4648,7 +4656,7 @@ a {
 }
 .blog__newsletter-wrapper {
   grid-row-gap: 2.4em;
-  background-color: #339097;
+  background-color: #30B1BB;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -4663,7 +4671,7 @@ a {
 }
 .blog__newsletter-wrapper.is-home {
   width: 100%;
-  margin-top: 6em;
+  margin-top: 3em;
   padding-top: 2.4em;
   padding-bottom: 0.8em;
 }
@@ -6782,6 +6790,35 @@ a {
 .text-span {
   color: var(--accent-green);
 }
+
+@media screen and (max-width: 767px) {
+  .infinix-desc {
+    font-size: 24px;
+  }
+}
+
+/* Medium Devices (Laptops) */
+@media (min-width: 769px) and (max-width: 992px) {
+  .infinix-desc {
+    font-size: 20px;
+  }
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 993px) and (max-width: 1200px) {
+  .infinix-desc {
+    font-size: 24px;
+  }
+}
+
+/* Extra Large Devices (Large Desktops) */
+@media (min-width: 1201px) {
+  .infinix-desc {
+    font-size: 32px;
+  }
+}
+
+
 @media screen and (max-width: 991px) {
   h1 {
     font-size: 64px;
