--- a/src/Components/ImageSlider/slider.css
+++ b/src/Components/ImageSlider/slider.css
@@ -1,39 +1,34 @@
-.image-slider-container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  max-width: 100%;
+.project-images-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-
-.image-slider {
+.project-images-list-item {
   display: flex;
-  transition: transform 0.5s ease; /* Smooth scrolling transition */
+  margin-bottom: 10px;
+}
+.project-images-list-item img {
+  flex: 1;
+  padding: 5px;
+  box-sizing: border-box;
+}
+.project-images-list-item img:nth-child(odd) {
+  margin-right: 5px;
+}
+/* Ensure square ratio */
+.project-images-list-item img::before {
+  content: "";
+  display: block;
+  padding-top: 100%; /* 1:1 aspect ratio */
 }
 
-.image-slide {
-  flex: 0 0 auto;
-  margin-right: 10px; /* Adjust the margin between slides as needed */
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-.scroll-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 24px;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.left {
-  left: 10px;
-}
-
-.right {
-  right: 10px;
+/* Responsive layout for mobile */
+@media (max-width: 600px) {
+  .project-images-list-item {
+      flex-direction: column;
+  }
+  .project-images-list-item img {
+      margin-right: 0;
+      margin-bottom: 5px;
+  }
 }
