--- a/src/Components/ImageSlider/slider.css
+++ b/src/Components/ImageSlider/slider.css
@@ -7,16 +7,16 @@
   display: flex;
   margin-bottom: 10px;
 }
-.project-images-list-item img {
+.project-images-list-item .image {
   flex: 1;
   padding: 5px;
   box-sizing: border-box;
 }
-.project-images-list-item img:nth-child(odd) {
+.project-images-list-item .image:nth-child(odd) {
   margin-right: 5px;
 }
 /* Ensure square ratio */
-.project-images-list-item img::before {
+.project-images-list-item .image::before {
   content: "";
   display: block;
   padding-top: 100%; /* 1:1 aspect ratio */
@@ -27,7 +27,7 @@
   .project-images-list-item {
       flex-direction: column;
   }
-  .project-images-list-item img {
+  .project-images-list-item .image {
       margin-right: 0;
       margin-bottom: 5px;
   }
