--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -2590,10 +2590,9 @@ a {
   font-weight: 400;
 }
 .project-heading4 {
-  font-size: 32px;
-  font-weight: 600;
-  margin-top: 5%;
-  width: 572px;
+  margin-top: 16px;
+  width: 100%;
+  font-family: "Universo-bold";
 }
 .space-top {
   margin-top: 20px;
@@ -2707,7 +2706,7 @@ a {
 .container-large.hero-content {
   z-index: 2;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   display: flex;
 }
@@ -2742,7 +2741,7 @@ a {
   position: static;
 }
 .remove-bottom_space {
-  padding-bottom: 1em;
+  padding-bottom: 1em !important;
 }
 .container-small.is-resources-grid {
   grid-column-gap: 1em;
@@ -3084,7 +3083,7 @@ a {
   height: 3.2em;
   grid-column-gap: 0.3em;
   grid-row-gap: 0.3em;
-  background-color:#30B1BB;
+  background-color:rgba(101, 132, 121, 0.2);
   border-radius: 100%;
   flex-direction: column;
   justify-content: center;
@@ -3099,7 +3098,7 @@ a {
   width: 30%;
   height: 2px;
   transform-origin: 0%;
-  background-color: #fff;
+  background-color: #30B1BB;
   transition: background-color 0.5s cubic-bezier(0.215, 0.61, 0.355, 1),
     transform 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   position: relative;
@@ -3108,7 +3107,7 @@ a {
   width: 30%;
   height: 2px;
   transform-origin: 100%;
-  background-color: #fff;
+  background-color: #30B1BB;
   transition: background-color 0.5s cubic-bezier(0.215, 0.61, 0.355, 1),
     transform 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   position: relative;
@@ -3703,6 +3702,7 @@ a {
   font-weight: 600;
   line-height: 1.1;
   margin-bottom: 8%;
+  font-family: "Universo-bold";
 }
 .services__wrapper {
   width: 100%;
@@ -3843,7 +3843,7 @@ a {
 }
 .record-div {
   width: 22.5%;
-  height: 5em;
+  height: 3.5em;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
   flex-direction: column;
@@ -3952,6 +3952,7 @@ a {
   flex-flow: wrap;
   align-items: flex-start;
   display: flex;
+  width: 100%;
 }
 
 .logo__heading {
@@ -4009,7 +4010,7 @@ a {
 }
 
 .logo__double {
-  width: 33.2%;
+  width: 32.2%;
   height: 14em;
   color: white;
   border-radius: 16px;
@@ -4663,6 +4664,9 @@ a {
   margin-top: 5em;
   padding: 1.6em 2em 0.9em;
   display: flex;
+  height: 340px;
+  align-items: center;
+  justify-content: center;
 }
 .blog__newsletter-wrapper.radius-24.is-single-blog {
   margin-top: 0;
@@ -4677,10 +4681,8 @@ a {
 }
 .blog__newsletter-form {
   width: 100%;
-  height: 100%;
-  grid-column-gap: 1.6em;
   align-items: flex-end;
-  margin-top: auto;
+  justify-content: space-between;
   padding-top: 0.2em;
   display: flex;
 }
@@ -4717,7 +4719,7 @@ a {
   color: white;
 }
 .blog__newsletter-field.is-home {
-  width: 50%;
+  width: 48%;
 }
 .blog__newsletter-block {
   width: 100%;
@@ -4727,7 +4729,6 @@ a {
   width: 33.3%;
   grid-column-gap: 0.6em;
   border: 0 solid #000;
-  border-bottom: 1px solid rgba(67, 85, 75, 0.2);
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
@@ -4899,10 +4900,13 @@ a {
 }
 .newsletter__heading-text {
   width: 50%;
+  display: flex;
+  align-items: center;
 }
 
 .footer-new {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   grid-template-columns: 1.5fr 0.5fr; /* Equal space for each column */
   width: 100%;
   margin-top: 20px;
@@ -4912,7 +4916,8 @@ a {
 /* Individual items in the grid */
 .footer-content-row {
   display: flex;
-  flex-direction: column;
+  flex: 1;
+  flex-direction: row;
   padding: 15px;
   width: 100%;
 }
@@ -5961,7 +5966,7 @@ a {
   display: flex;
 }
 .newsletter-button-text {
-  font-size: 24px;
+  font-size: 21px;
   font-weight: 600;
 }
 .single-process-wrap {
