--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -2709,6 +2709,7 @@ a {
   justify-content: center;
   align-items: center;
   display: flex;
+  padding-bottom: 6em;
 }
 .container-medium {
   width: 100%;
