--- a/src/Components/Home/mainstyle.css
+++ b/src/Components/Home/mainstyle.css
@@ -3665,13 +3665,14 @@ a {
   height: 100%;
 }
 .column-50.flex-vertical.is-grid {
-  grid-gap: 16px;
+  grid-column-gap: 16px;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   display: grid;
   margin: auto;
   margin-top: 4%;
   width: 100%;
+  grid-row-gap:26px;
 }
 
 .column-50.flex-vertical.is-grid.is-footer-grid {
