--- a/src/Components/ProjectPage/ProjectPage.css
+++ b/src/Components/ProjectPage/ProjectPage.css
@@ -1,7 +1,8 @@
 .descr {
   font-size: 22px;
   font-weight: 400;
-  margin-top: 3%;
+  margin-top: 68px;
+  margin-bottom: 68px;
   margin-right: 10%;
 }
 
