--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -4,11 +4,13 @@
   width: 100%;
   height: 500px;
 }
+
 .contact-left {
   display: flex;
   flex-direction: column;
   flex: 0.7;
 }
+
 .contact-right {
   background-color: purple;
   flex: 1.3;
@@ -19,15 +21,40 @@
   font-family: "Universo-bold";
   font-size: 50px;
   font-weight: 400;
-  line-height: 60.51px;
+  line-height: 1.4;
 }
-@media screen and (max-width: 991px) {
+
+
+/* Styles for devices with a maximum width of 767px (e.g., smartphones) */
+@media only screen and (max-width: 767px) {
+  .contact-heading {
+    font-size: 22px;
+  }
+
   .contact-container {
     height: auto;
     flex-direction: column;
   }
+}
+
+/* Styles for devices with a width between 768px and 991px (e.g., tablets) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
 
   .contact-heading {
     font-size: 32px;
+  }
+}
+
+/* Styles for devices with a width between 992px and 1199px (e.g., larger tablets and small desktops) */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .contact-heading {
+    font-size: 32px;
+  }
+}
+
+/* Styles for devices with a width of 1200px and above (e.g., larger desktops) */
+@media only screen and (min-width: 1200px) {
+  .contact-heading {
+    font-size: 38px;
   }
 }
